2005-03-16  Not Zed  <NotZed@Ximian.com>

	** See bug #71003, again.

	* mail-component.c (impl_quit): fix sense of 'can quit' logic.

2005-03-14  Not Zed  <NotZed@Ximian.com>

	** See bug #73550

	* em-format-hook.c (emfh_format_format): if we are disabled, don't
	invoke handler, try to invoke old handler if there was one.

2005-03-10  Not Zed  <NotZed@Ximian.com>

	** See bug #73293

	* message-list.c (main_folder_changed): emit a 'list built' signal
	if we just modified it too.

2005-03-10  Vivek Jain  <jvivek@novell.com>
	
	**fixes bug #73139
	* em-folder-tree.c (render_pixbuf):change the shared-folder icon names 
	to the names in gnome-icon-theme 

2005-03-03  Not Zed  <NotZed@Ximian.com>

	** See bug #66592

	* mail-tools.c (mail_tool_make_message_attachment): jus call
	camel_medium_remove_header to remove the bcc header, don't need to
	loop.

	* mail-ops.c (mail_send_message): try to find the account by uid
	first, fall back to name.

	* em-composer-utils.c (composer_get_message): set
	x-evolution-account by uid, not name.

2005-03-02  Not Zed  <NotZed@Ximian.com>

	** See bug #66592

	* em-composer-utils.c (got_post_folder): no longer needed.
	(composer_get_message): remove 'post' and 'no_recipeints' args.

	* mail-ops.c (mail_send_message): change for xev changes. Also
	handle postto if set.

	* mail-tools.c (mail_tool_remove_xevolution_headers) 
	(mail_tool_restore_xevolution_headers): fix for api change.
	(mail_tool_destroy_xevolution): remove.

	* mail-tools.h: remove XEvolution, just use a struct _header_raw
	for it.

	* em-composer-utils.c (em_utils_composer_send_cb): don't post
	message here, just queue it like any other outgoing mail.

2005-03-02  Not Zed  <NotZed@Ximian.com>

	** See "bug" 73100

	* mail-dialogs.glade: empty out the license_top_label text, it is
	always overwriten by the code.

2005-03-01  Not Zed  <NotZed@Ximian.com>

	* message-list.c: include atkutil.h
	(message_list_construct): cast warning.
