@@ -1,5 +1,13 @@
 2005-03-16  Not Zed  <NotZed@Ximian.com>
 
+	** See bug #73559
+	
+	* em-filter-source-element.c
+	(em_filter_source_element_get_sources): check the url != "" and decoded
+	before using it.
+
+2005-03-16  Not Zed  <NotZed@Ximian.com>
+
 	** See bug #71003, again.
 
 	* mail-component.c (impl_quit): fix sense of 'can quit' logic.
